@@ -362,7 +362,6 @@ ELSE(CMAKE_SYSTEM MATCHES "morphos")
 ENDIF(CMAKE_SYSTEM MATCHES "morphos")
 ENDIF(CMAKE_SYSTEM MATCHES "Darwin")
 ENDIF(CMAKE_SYSTEM MATCHES "Windows")
-ENDIF(CMAKE_SYSTEM MATCHES "IRIX")
 ENDIF(CMAKE_SYSTEM MATCHES "SunOS")
 ENDIF(CMAKE_SYSTEM MATCHES "BSD")
 ENDIF(CMAKE_SYSTEM MATCHES "Linux")
@@ -501,6 +500,9 @@ CHECK_BACKEND(ARTS   artsc      artsc      artsc.h             arts_free)
 CHECK_BACKEND(DMEDIA ""         audio      dmedia/audio.h      alGetResourceByName)
 CHECK_BACKEND(ESD    esd        esd        esd.h               esd_audio_open)
 CHECK_BACKEND(SDL    sdl        sdl        SDL.h               SDL_LockAudio)
+#IF(WIN32)
+#  CHECK_BACKEND(DSOUND ""       dsound     dsound.h     ???)
+#ENDIF(WIN32)
 
 CHECK_BACKEND(MP3    smpeg      smpeg      smpeg.h             SMPEG_play)
 CHECK_BACKEND(VORBIS vorbisfile vorbisfile vorbis/vorbisfile.h ov_clear)
@@ -514,19 +516,6 @@ IF(NULLOUT)
   SET(OS_OBJS ${OS_OBJS} ${NULL_OBJS})
   ADD_DEFINE(USE_BACKEND_NULL)
 ENDIF(NULLOUT)
-
-IF(DSOUND)
-  IF(CMAKE_SYSTEM MATCHES "Windows")
-    CHECK_INCLUDE_FILE(dsound.h FOUND_DSOUND)
-    IF(FOUND_DSOUND)
-      SET(ADD_LIBS ${ADD_LIBS} dsound)
-    ELSE(FOUND_DSOUND)
-
-      MESSAGE("dsound.h not found - DirectSound support disabled.")
-      SET(DSOUND OFF)
-    ENDIF(FOUND_DSOUND)
-  ENDIF(CMAKE_SYSTEM MATCHES "Windows")
-ENDIF(DSOUND)
 
 
 # Special objs for architectures
